# 3d-vision

./: README.md  inspect_api.py  inspect_create.py  inspect_depthai.py  inspect_depthai_preset.py  inspect_recursive.py  inspect_stereo_config.py  inspect_stereo_config_deep.py  inspect_xlink.py  pyproject.toml
oakd_scan_gui/: __init__.py  app.py
oakd_scan_gui/analysis/: __init__.py  coverage.py  dead_zones.py
oakd_scan_gui/capture/: __init__.py  oak.py
oakd_scan_gui/export/: __init__.py  mesh.py
oakd_scan_gui/ui/: __init__.py  overlays.py  window.py
